--- a/src/styles/DetailedNews.module.scss
+++ b/src/styles/DetailedNews.module.scss
@@ -21,7 +21,8 @@
         }
     }
 
-    .commentsContainer {
-        
+    .commentTitle {
+        font-size: 20px;
+        font-weight: 600;
     }
 }
