--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -18,4 +18,10 @@
             color: black;
         }
     }
+
+    .paginationContainer {
+        display: flex;
+        justify-content: center;
+        margin: 50px 0px;
+    }
 }
