--- a/src/components/Comments/Comments.module.scss
+++ b/src/components/Comments/Comments.module.scss
@@ -5,6 +5,7 @@
     padding: 20px;
     margin: 20px 0px;
     border-radius: 10px;
+    background-color: white;
 
     .title {
         font-size: 24px;
