--- a/src/components/News/News.module.scss
+++ b/src/components/News/News.module.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: white;
 
     .titleContainer {
         display: flex;
