--- a/src/styles/DetailedNews.module.scss
+++ b/src/styles/DetailedNews.module.scss
@@ -1,10 +1,17 @@
+.body {
+    background-color: #FAF9F6;
+
 .container {
     max-width: 1200px;
     margin: auto;
-    margin-top: 20px;
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    hr {
+        margin: 30px 0px;
+    }
 
     .title {
         font-size: 24px;
@@ -13,6 +20,7 @@
     }
 
     .details {
+        margin-top: 10px;
         display: flex;
         font-size: 16px;
 
@@ -25,4 +33,5 @@
         font-size: 20px;
         font-weight: 600;
     }
+}
 }
