--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,3 +1,6 @@
+.body {
+background-color: #FAF9F6;
+
 .bodyContainer {
     max-width: 1200px;
     display: flex;
@@ -24,4 +27,5 @@
         justify-content: center;
         margin: 50px 0px;
     }
+}
 }
